# SA-2025-Generator

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  readme.md
scripts/: generate-field-map.mjs
src/: App.css  App.tsx  api.ts  fieldMap.ts  index.css  pdf.ts  pdfFill.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: field-map.json  settings-seed.json  tp-companies-seed.json
src-tauri/src/: compute.rs  contract_info.rs  db.rs  export.rs  fieldmap.rs  files.rs  grid_values.rs  import.rs  lib.rs  main.rs  nzbn_api.rs  projectfile.rs  projects.rs  settings.rs  tp_companies.rs
src/components/: AboutModal.tsx  BulkCheckResultsModal.css  BulkCheckResultsModal.tsx  CompanyMatchModal.css  CompanyMatchModal.tsx  ConfirmModal.tsx  ContractInfoForm.css  ContractInfoForm.tsx  ExportCsvModal.css  ExportCsvModal.tsx  ExportPdfModal.tsx  FieldOverlay.css  FieldOverlay.tsx  Forms.css  ImportCsvModal.tsx  ImportProgressOverlay.css  ImportProgressOverlay.tsx  MenuBar.css  MenuBar.tsx  Modal.css  Modal.tsx  OpenProjectModal.tsx  PdfViewer.css  PdfViewer.tsx  PromptModal.tsx  SettingsModal.css  SettingsModal.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css  StatusBar.tsx  SubcontractInfoView.css  SubcontractInfoView.tsx  SubcontractorDetailsGrid.css  SubcontractorDetailsGrid.tsx  TabBar.css  TabBar.tsx  TpCompaniesGrid.css  TpCompaniesGrid.tsx  UpdateBanner.tsx
src/hooks/: useDebouncedFieldSave.ts  useMappingRecompute.ts
src/lib/: contractInfoCellMap.ts  csvImport.ts  (+9 more)
